# portal_swissit

./: LICENSE.txt  ngrok.yml  notes.md  pyproject.toml  readme.md
.github/workflows/: azure-static-web-apps-calm-sky-0cc398a03.yml  main_portal-swissit.yml
backend/: api_test.rest  manage.py  post_build.sh  pyproject.toml  requirements.txt
backend/api/: admin.py  api.py  apps.py  models.py  schemas.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/api/templates/api/: user_reset_password.html  user_reset_password.txt
backend/backend/: deployment.py  settings.py  urls.py  wsgi.py
backend/users/: admin.py  models.py
backend/users/migrations/: 0001_initial.py
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js
frontend/public/locales/de/: translation.json
frontend/public/locales/en/: translation.json
frontend/public/locales/fr/: translation.json
frontend/src/: App.jsx  api.js  main.jsx
frontend/src/assets/: sidebarData.js
frontend/src/components/: Form.jsx  LoginForm.jsx  LoginLeftPane.jsx  ProtectedRoute.jsx  RegisterForm.jsx  Sidebar.jsx
frontend/src/components/Authentication/: LoginLeftPane.jsx  RegisterForm.jsx
frontend/src/components/Dashboard/: Dashboard.jsx  Grid.jsx  RecentTransaction.jsx  StatsCards.jsx  TopBar.jsx
frontend/src/components/Sidebar/: AccountToggle.jsx  CommandMenu.jsx  ContactUs.jsx  Search.jsx  (+3 more)
frontend/src/pages/: Home.jsx  Login.jsx  Logout.jsx  NotFound.jsx  PasswordReset.jsx  PasswordResetRequest.jsx  Register.jsx
